[DLR-BugFixes] My groups page spacing fix.

--- a/src/app/community/groups-feature/pages/groups-all/my-groups.page.scss
+++ b/src/app/community/groups-feature/pages/groups-all/my-groups.page.scss
@@ -42,7 +42,7 @@ ion-header {
 }
 
 .group-card-container {        
-    width: 49%;
+    width: 48%;
 
     .group-details {
         display: flex;
